<?xml version="1.0"?>
<package format="2">
  <name>markhor_2dnav</name>
  <version>0.0.0</version>
  <description>The markhor_2dnav package</description>
  <maintainer email="capra@ens.etsmtl.ca">crackhead</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>my_odom_configuration_dep</build_depend>
  <build_depend>my_sensor_configuration_dep</build_depend>
  <build_depend>my_tf_configuration_dep</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>my_odom_configuration_dep</build_export_depend>
  <build_export_depend>my_sensor_configuration_dep</build_export_depend>
  <build_export_depend>my_tf_configuration_dep</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>my_odom_configuration_dep</exec_depend>
  <exec_depend>my_sensor_configuration_dep</exec_depend>
  <exec_depend>my_tf_configuration_dep</exec_depend>

  <export>
  
  </export>
</package>
