<?xml version="1.0"?>
<package format="2">
  <name>markhor_base</name>
  <version>0.0.0</version>
  <description>The markhor_base package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
