<?xml version="1.0" ?>
<package format="2">
  <name>markhor_base</name>
  <version>0.0.0</version>
  <description>The markhor_base package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>