<?xml version="1.0"?>
<package format="2">
  <name>markhor_bringup</name>
  <version>0.0.0</version>
  <description>The markhor_bringup package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>visp_auto_tracker</build_depend>

  <build_depend>joy</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>web_video_server</build_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>visp_auto_tracker</exec_depend>

</package>
