<?xml version="1.0"?>
<package format="2">
    <name>markhor_gazebo</name>
    <version>0.0.0</version>
    <description>The markhor_gazebo package</description>

    <maintainer email="capra@clubcapra.com">Capra</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>gazebo_plugins</depend>
    <depend>gazebo_ros_control</depend>
    <depend>pointcloud_to_laserscan</depend>
    <depend>hector_slam</depend>
    <depend>velodyne_simulator</depend>

    <!-- Those 2 repos are not supported by rosdep yet, to be fixed, see readme for repo path -->
    <test_depend>aws-robomaker-small-house-world</test_depend>
    <test_depend>gazebo_ros_tracked_vehicle_interface</test_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
