<?xml version="1.0"?>
<package format="2">
  <name>markhor_slam</name>
  <version>0.0.0</version>
  <description>The markhor_slam package</description>

  <maintainer email="capra@clubcapra.com">charles</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>rtabmap_ros</buildtool_depend>
  <buildtool_depend>vectornav</buildtool_depend>
  <buildtool_depend>move_base</buildtool_depend>
  <buildtool_depend>robot_localization</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export></export>
</package>
